[project]
name = "trip-planner"
version = "0.1.0"
description = "AgentsVille Trip Planner - agentic AI itinerary planning project"
requires-python = ">=3.13,<3.14"
dependencies = [
    "json-repair==0.47.1",
    "numexpr==2.11.0",
    "openai==1.74.0",
    "pandas==2.3.0",
    "pydantic==2.11.7",
    "python-dotenv==1.1.0",
    "ipykernel",
]
